# Machine-learning-specialization

./: PKG-INFO  SOURCES.txt  __init__.py  db_connector-0.1.0-py3-none-any.whl  db_connector-0.1.1-py3-none-any.whl  db_connector-0.2.1-py3-none-any.whl  db_connector-0.3.1-py3-none-any.whl  db_connector.py  psm_large.py  psm_synthetic_test.py  pyproject.toml  requires.txt  top_level.txt  Шаблон_расчета_эффекта_v2.7.1.ipynb  Шаблон_расчета_эффекта_v2_7_ЛК_uplift.ipynb
